- hypridle is not compatable with sway
- each desktop will stop the other idle service if enabled at the same time
- add basic abstraction layers for each service for easily programmable idle times
- fix dpms on bug for multi-monitor setup in sway # https://github.com/swaywm/sway/issues/5101
- swww reloads again on both sway and hyprland reload - name of service changed
- utilize symlink join instead of programs.zsh.shellAliases for both neovim vi and vim aliases


5-27-2025
- add more profiles to home-manager
- add custom.wallpaper option to home-manager
- stylix is now inverted such that targets must be included rather than excluded
- update rmpc theme.ron
- set dbus-broker as the default dbus implementation for all systems
- fix logout button on waybar with hyprland


5-23-2025
- add gparted, zint, and glabels to programs
- remove default packages install by the programs.sway nixos option if home-manager is present
- add [ "--unsupported-gpu" ]; to programs.sway.extraOptions for nvidia gpus


5-21-2025
- massive update to the modules structure
- profiles directory is now removed and merged into modules
- removed many redundant flake outputs that weren't consumable by other flakes anyway
- added a profiles toplevel for both nixos and home-manager
- modules are less dependent on lib.mkHost and can be applied in a less instrusive manner
- update nix-library/lib.autoImport function to exclude any file named default.nix. 
  Can now import files within the current directory without causing infinite recursion
- make stylix home-manager input follow mine as weird issues came up with home-manager version mismatches
- remove installation instructions from readme. Will update this tomorrow (probably)
- update readme


5-20-2025
- create the lact service under services.lact.enable
- add proper kernel flag for fan control on amdgpus
- service should now start automatically


5-19-2025
- add configuration for dell optiplex 380


5-15-2025
- add batmon
- add sysbench