@@ -1,17 +1,7 @@
 { pkgs, lib, config, ... }:
 let
-  inherit (lib) mkEnableOption mkOption mkIf types getExe mkForce;
+  inherit (lib) mkAfter mkEnableOption optionals mkOption mkIf types getExe mkForce;
   cfg = config.programs.fastfetch;
-  image-randomizer = pkgs.writeScript "fastfetch-image-randomizer.sh" ''
-    #!${getExe pkgs.bash}
-
-    images=(${toString (lib.concatStringsSep " " cfg.imageRandomizer.images)})
-    image_count=''${#images[@]}
-    random_index=$((RANDOM % image_count))
-    selected_image=''${images[$random_index]}
-
-    ${getExe cfg.package} -l "$selected_image"
-  '';
 in
 {
   options.programs.fastfetch = {
@@ -21,12 +11,11 @@ in
       type = types.str;
       default = "nixos";
     };
-    imageRandomizer.enable = mkEnableOption ''
-      whether to enable randomized fastfetch image display
-      if unused, programs.fastfetch.image will be used instead
-    '';
+
+    imageRandomizer.enable = mkEnableOption "fastfetch image randomization";
+
     imageRandomizer.images = mkOption {
-      description = "list of images that will be passed to the fastfetch randomizer";
+      description = "list of image nix-paths that will be passed to the fastfetch randomizer";
       type = types.listOf types.str;
       default = [ cfg.image ]; # just in case its enabled but no images are provided
     };
@@ -35,18 +24,21 @@ in
   config = mkIf cfg.enable {
     programs.fastfetch = {
       settings = (mkIf (cfg.imperativeConfig)) (mkForce { });
+      # ok so long story here. To redirect the fastfetch shell command to the image randomizer script I must set cfg.package using symlinkJoin
+      # if using symlinkJoin to link "fastfetch" to the script and adding to home.packages, HM throws a fit about a collision
+      # doing it this way works well but with the only downside of being unable to set your fastfetch version when using the image randomizer option
+      package = mkIf cfg.imageRandomizer.enable (mkForce (
+        pkgs.symlinkJoin {
+          name = "fastfetch";
+          paths = [ (import ./image-randomizer.nix { inherit pkgs lib config; }) ];
+
+          postBuild = ''
+            rm -f $out/bin/fastfetch
+            ln -s $out/bin/ff-image-randomizer $out/bin/fastfetch
+          '';
+        }
+      ));
     };
-    # direct the alias to the randomizer script
-    programs.zsh.shellAliases = {
-      ff = "fastfetch";
-    } //
-    (if (cfg.imageRandomizer.enable)
-    then
-      {
-        fastfetch = "${image-randomizer}";
-      }
-    else
-      { fastfetch = "${getExe cfg.package}"; });
   };
 }
 
