@@ -15,7 +15,6 @@ in
             {
               name = "vi";
               paths = [ cfg.package ];
-              buildInputs = [ pkgs.makeWrapper ];
 
               postBuild = ''
                 rm -f $out/bin/vi
@@ -31,7 +30,6 @@ in
             {
               name = "vim";
               paths = [ cfg.package ];
-              buildInputs = [ pkgs.makeWrapper ];
 
               postBuild = ''
                 rm -f $out/bin/vim
