@@ -6,7 +6,8 @@
 - add basic abstraction layers for each service for easily programmable idle times
 - fix dpms on bug for multi-monitor setup in sway # https://github.com/swaywm/sway/issues/5101
 - swww reloads again on both sway and hyprland reload - name of service changed
-- utilize symlink join instead of programs.zsh.shellAliases for both neovim vi and vim aliases
+- utilize symlinkJoin instead of programs.zsh.shellAliases for both neovim vi and vim aliases
+- also use symlinkJoin to remove dependency on zsh.shellAliases for fastfetch when image randomizer is used
 
 
 5-27-2025
